--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-ersion: 1.0.{build}
+version: 1.0.{build}
 build_script:
 - cmd: >-
     cd FintFellesModel
@@ -6,7 +6,7 @@ build_script:
     dotnet restore
 
     dotnet build
-    
+
 before_deploy:
 - cmd: nuget pack FintFellesModel.nuspec
 
