--- a/FintFellesModel/FintFellesModel.csproj
+++ b/FintFellesModel/FintFellesModel.csproj
@@ -1,13 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <MinimumVisualStudioVersion>14.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F4E4FB66-DBE5-4625-9016-AD97DBBFE427}</ProjectGuid>
+    <ProjectGuid>{AD6D9EEE-BA4A-4256-ABE0-DAED3D2FD119}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>FintFellesModel</RootNamespace>
     <AssemblyName>FintFellesModel</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
@@ -33,7 +32,6 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\FintFellesModel.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <None Include="FintFellesModel.nuspec" />
@@ -41,27 +39,15 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Adresse.cs" />
-    <Compile Include="Aktor.cs" />
-    <Compile Include="Enhet.cs" />
-    <Compile Include="Identifikator.cs" />
-    <Compile Include="Kontaktinformasjon.cs" />
-    <Compile Include="Periode.cs" />
-    <Compile Include="Person.cs" />
-    <Compile Include="Personnavn.cs" />
+    <Compile Include="Model\Adresse.cs" />
+    <Compile Include="Model\Aktor.cs" />
+    <Compile Include="Model\Enhet.cs" />
+    <Compile Include="Model\Identifikator.cs" />
+    <Compile Include="Model\Kontaktinformasjon.cs" />
+    <Compile Include="Model\Periode.cs" />
+    <Compile Include="Model\Person.cs" />
+    <Compile Include="Model\Personnavn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
-  <ProjectExtensions>
-    <VisualStudio>
-      <UserProperties project_1json__JSONSchema="http://json.schemastore.org/mycode" />
-    </VisualStudio>
-  </ProjectExtensions>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
