--- a/FintFellesModel/FintFellesModel.nuspec
+++ b/FintFellesModel/FintFellesModel.nuspec
@@ -8,7 +8,7 @@
     <owners>oae</owners>
     <projectUrl>http://github.com/fintprosjektet</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>FintFellesModel</description>
+    <description>FintFellesModel 3</description>
     <releaseNotes>Initial model.</releaseNotes>
     <copyright>Copyright 2017</copyright>
     <tags>fint model</tags>
