Added config for Bintray

--- a/FINT.Model.Felles/FINT.Model.Felles.csproj
+++ b/FINT.Model.Felles/FINT.Model.Felles.csproj
@@ -1,7 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
+    <PackageId>FINT.Model.Felles</PackageId>
+    <Authors>FINT</Authors>
+    <Description>Fint Model Felles</Description>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageReleaseNotes>First release</PackageReleaseNotes>
+    <PackageTags>fint</PackageTags>
+    <Version>0.0.1</Version>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netstandard1.4\FINT.Model.Felles.xml</DocumentationFile>
   </PropertyGroup>
 
 </Project>
