--- a/FINT.Model.Felles/FINT.Model.Felles.csproj
+++ b/FINT.Model.Felles/FINT.Model.Felles.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.4</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <PackageId>FINT.Model.Felles</PackageId>
     <Authors>FINT</Authors>
     <Description>Fint Model Felles</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>First release</PackageReleaseNotes>
+    <PackageReleaseNotes>FINT shared model</PackageReleaseNotes>
     <PackageTags>fint</PackageTags>
-    <Version>0.0.1</Version>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
