--- a/FINT.Model.Felles/FINT.Model.Felles.csproj
+++ b/FINT.Model.Felles/FINT.Model.Felles.csproj
@@ -8,7 +8,7 @@
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageReleaseNotes>FINT shared model</PackageReleaseNotes>
     <PackageTags>fint</PackageTags>
-    <Version>$(VERSION)</Version>
+    <Version>$([System.IO.File]::ReadAllText("version.txt"))</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
