Revert "Fix version number in project file"
This reverts commit ca197b1601fdcd09c0521c382811b1acc2aa94ef.

--- a/FINT.Model.Felles/FINT.Model.Felles.csproj
+++ b/FINT.Model.Felles/FINT.Model.Felles.csproj
@@ -8,7 +8,7 @@
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageReleaseNotes>FINT shared model</PackageReleaseNotes>
     <PackageTags>fint</PackageTags>
-    <Version>2.7.0</Version>
+    <Version>$([System.IO.File]::ReadAllText("version.txt"))</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
